<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="WonText">YOU WON!!</string>
    <string name="scissorimagebutton">Scissor Image Button</string>
    <string name="paperimagebutton">Paper Image Button</string>
    <string name="rockimagebutton">Rock Image Button</string>
    <string name="rock_sign">Rock Sign</string>
    <string name="start_game">Start Game</string>
</resources>